...
                        .padding(horizontal = 16.dp)
                    if (title != null)
                        Text(
                            text = title,
                            style = MaterialTheme.typography.titleMedium,
                            textAlign = TextAlign.Center,
                            modifier = textModifier.testTag("Confirmation.Module.Title")
                        )
                    if (body != null)
                        Text(
                            text = body,
                            style = MaterialTheme.typography.bodyMedium,
                            modifier = textModifier.testTag("Confirmation.Module.Body")
                        )
                    Row(
                        horizontalArrangement = Arrangement.SpaceAround,
                        modifier = Modifier.fillMaxWidth()
                    ) {
                        actions.forEachIndexed { index, action ->
...
